crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/sorts_imports_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --formatter-enabled=false --linter-enabled=false --write file.svelte
```

## `file.svelte`

```svelte
<script lang="ts">
import * as svelteUse from "svelte-use";
import Button from "./components/Button.svelte";
</script>
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
