crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/supports_ts_in_embedded_expressions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
// this makes it typescript
</script>

<div
	onclick={(e) => {
		if ((e.target as HTMLElement).closest("button")) {
			return;
		}
		e.currentTarget.parentElement?.querySelector("input")?.focus();
	}}
>
</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
