crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/use_const_not_triggered_in_snippet_sources.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script>
let hello = "Hello World";
</script>

<html>
    <span>{hello}</span>
</html>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
