crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/use_import_type_not_triggered_for_enum_in_control_flow_blocks.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
  import { IfEnum, ElseIfEnum, EachEnum, EachKeyEnum, KeyEnum, AwaitEnum } from './models.ts';

  interface Props {
    foo: IfEnum;
    bar: ElseIfEnum;
    baz: EachEnum;
    bap: EachKeyEnum;
    qux: KeyEnum;
    zap: AwaitEnum;
  }
  let { foo }: Props = $props();
</script>

{#if foo === IfEnum.private}
  private
{:else if foo === ElseIfEnum.public}
  public
{/if}

{#each EachEnum.Foo as item (EachKeyEnum[item])}
  {item.name}
{/each}

{#key KeyEnum.Foo}
  <Component />
{/key}

{#await AwaitEnum.Foo}
  loading
{:then data}
  {data}
{/await}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
