crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/use_import_type_not_triggered_for_enum_in_template.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.svelte`

```svelte
<script lang="ts">
import { Component, FooEnum } from './types';
</script>
<main>
  <Component />
  {FooEnum.Foo}
</main>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
